# trait_map

./: Cargo.toml  README.md
src/: game_trait_map.rs  lib.rs  main.rs  trait_map.rs
trait_map/: Cargo.toml  README.md
trait_map/src/: lib.rs
trait_map_derive/: .gitignore  Cargo.toml  build.rs
trait_map_derive/src/: ctxt.rs  lib.rs
trait_map_derive/tests/: ui.rs
trait_map_derive/tests/ui/fail/: invalid_syntax.rs  invalid_syntax.stderr  no_such_trait.rs  no_such_trait.stderr  trait_not_implemented.rs  trait_not_implemented.stderr
trait_map_derive/tests/ui/pass/: allows_paths.rs  duplicate_traits.rs  empty_traits_list.rs  multiple_attributes.rs  multiple_traits.rs  supports_generics.rs  valid_syntax.rs
