[package]
name = "trait-map"
description = "Rust map for dynamic trait storage and references"
version = "0.2.0"
edition = "2021"
authors = ["Bryan McClain <bamcclain10@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ComprosoftCEO/trait_map"
documentation = "https://docs.rs/trait_map"
license = "GPL-3.0-or-later"
keywords = ["map", "dynamic", "trait", "downcast"]
categories = ["data-structures"]

[dependencies]
trait_map_derive = { version = "=0.1.0", optional = true, path = "../trait_map_derive" }

[dev-dependencies]
trait_map_derive = { version = "0.1.0", path = "../trait_map_derive" }

[features]

# Allows you to #[derive(TraitMapEntry)]
derive = ["trait_map_derive"]

[lib]
doctest = false