[package]
name = "trait_map_derive"
version = "0.1.0"
edition = "2021"

[dependencies]
quote = "1.0.23"
syn = { version = "1.0.107", features = ["extra-traits"] }

[build-dependencies]
rustc_version = "0.2"

[dev-dependencies]
trybuild = "1.0"
trait_map = { version = "0.3.0", path = "../trait_map", features = ["derive"] }

[lib]
proc-macro = true
doctest = false
